--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -409,14 +409,18 @@ textarea {
 
 .quote-container {
     position: relative;
-    display: inline-block;
+    display: flex;
+    justify-content: center; /* 수평 가운데 정렬 */
+    align-items: center; /* 수직 가운데 정렬 */
     text-align: center;
     width: 100%;
+    height: 100%; /* 필요에 따라 높이를 조정하세요 */
     background-color: black;
 }
 
 .quote-image {
     width: 50%;
+    height: auto;
 }
 
 .quote-text {
