--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
     <meta name="description" content="Create your own movie scenes and dialogues with the Movie Scene Generator. Select a genre, style, and decade, and let the AI generate unique scenes and quotes for you.">
     <title>Movie Scene Generator</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-    <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}" type="image/x-icon"> <!-- Favicon 추가 -->
+    <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}" type="image/x-icon">
 
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Movie Scene Generator">
@@ -249,7 +249,12 @@
                     method: 'POST',
                     body: formData
                 })
-                .then(response => response.json())
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Network response was not ok');
+                    }
+                    return response.json();
+                })
                 .then(data => {
                     if (data.response_text) {
                         quoteText.textContent = data.response_text;
@@ -262,7 +267,12 @@
                         throw new Error('Failed to generate quote.');
                     }
                 })
-                .then(response => response.json())
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Network response was not ok');
+                    }
+                    return response.json();
+                })
                 .then(data => {
                     if (data.response_image) {
                         generatedImage.src = data.response_image;
