--- a/templates/index.html
+++ b/templates/index.html
@@ -297,12 +297,12 @@
             const submitButton = document.getElementById('submit-button');
             const buttonText = document.querySelector('.button-text');
             const buttonSpinner = document.getElementById('button-spinner');
-
+        
             submitButton.disabled = true;
             buttonText.style.display = 'none';
             buttonSpinner.style.display = 'block';
-
-            fetch('/api/generate', {
+        
+            fetch('/api/generate_text', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
@@ -316,47 +316,55 @@
             })
             .then(response => response.json())
             .then(data => {
-                submitButton.disabled = false;
-                buttonText.style.display = 'block';
-                buttonSpinner.style.display = 'none';
-
                 if (data.error) {
                     alert(data.error);
+                    submitButton.disabled = false;
+                    buttonText.style.display = 'block';
+                    buttonSpinner.style.display = 'none';
                 } else {
-                    const responseContainer = document.getElementById('response-container');
-                    responseContainer.innerHTML = `
-                        <section class="response-section">
-                            <div id="quote-container" class="quote-container">
-                                <img src="${data.image}" alt="Generated Image" class="quote-image">
-                                <div class="quote-text">${data.quote}</div>
-                            </div>
-                        </section>
-                        <button id="share-twitter" class="x-button" data-response-text="${data.quote}">
-                            <img src="/static/images/x-logo.png" alt="X Logo" class="x-logo">
-                            Share on X
-                        </button>
-                    `;
-
-                    const shareTwitterButton = document.getElementById('share-twitter');
-                    if (shareTwitterButton) {
-                        shareTwitterButton.addEventListener('click', () => {
-                            const url = encodeURIComponent(window.location.href);
-                            const responseText = shareTwitterButton.getAttribute('data-response-text');
-
-                            // Check user's language
-                            const userLang = navigator.language || navigator.userLanguage;
-                            let text;
-
-                            if (userLang === 'ko' || userLang === 'ko-KR') {
-                                text = `${responseText}\n\n당신만의 영화의 한장면과 대사를 만들어보세요.🎬\n#MovieQuoteGenerator #명대사제조기`;
-                            } else {
-                                text = `${responseText}\n\nCreate your own movie scenes and dialog.🎬\n#MovieQuoteGenerator`
-                            }
-
-                            const twitterUrl = `https://twitter.com/intent/tweet?text=${encodeURIComponent(text)}&url=${url}`;
-                            window.open(twitterUrl, '_blank');
-                        });
-                    }
+                    const responseText = data.quote;
+                    fetch('/api/generate_image', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json',
+                        },
+                        body: JSON.stringify({
+                            genre: genre,
+                            style: style,
+                            period: period,
+                            user_input: userInput
+                        }),
+                    })
+                    .then(response => response.json())
+                    .then(data => {
+                        submitButton.disabled = false;
+                        buttonText.style.display = 'block';
+                        buttonSpinner.style.display = 'none';
+        
+                        if (data.error) {
+                            alert(data.error);
+                        } else {
+                            const responseContainer = document.getElementById('response-container');
+                            responseContainer.innerHTML = `
+                                <section class="response-section">
+                                    <div id="quote-container" class="quote-container">
+                                        <img src="${data.image}" alt="Generated Image" class="quote-image">
+                                        <div class="quote-text">${responseText}</div>
+                                    </div>
+                                </section>
+                                <button id="share-twitter" class="x-button" data-response-text="${responseText}">
+                                    <img src="/static/images/x-logo.png" alt="X Logo" class="x-logo">
+                                    Share on X
+                                </button>
+                            `;
+                        }
+                    })
+                    .catch(error => {
+                        submitButton.disabled = false;
+                        buttonText.style.display = 'block';
+                        buttonSpinner.style.display = 'none';
+                        console.error('Error:', error);
+                    });
                 }
             })
             .catch(error => {
