--- a/templates/index.html
+++ b/templates/index.html
@@ -89,7 +89,7 @@
                         <option value="Movies" {% if selected_style == "Movies" %}selected{% endif %}>Movies</option>
                         <option value="Film Noir" {% if selected_style == "Film Noir" %}selected{% endif %}>Film Noir</option>
                         <option value="Manga" {% if selected_style == "Manga" %}selected{% endif %}>Manga</option>
-                        <option value="Japanese animation" {% if selected_style == "Japanese animation" %}selected{% endif %}>Japanese animation</option>
+                        <option value="Anime" {% if selected_style == "Anime" %}selected{% endif %}>Anime</option>
                         <option value="Western Comic Book Style" {% if selected_style == "Western Comic Book Style" %}selected{% endif %}>Western Comic Book Style</option>
                         <option value="clay art" {% if selected_style == "clay art" %}selected{% endif %}>clay art</option>
                     </select>
