--- a/templates/index.html
+++ b/templates/index.html
@@ -111,7 +111,7 @@
                     <span class="button-text">Generate Quote 🍿</span>
                     <div class="spinner" id="button-spinner" style="display: none;"></div>
                 </button>
-                <button type="button" id="support-button" class="outline-button">Support Creator 🍺</button>
+                <a href="https://www.buymeacoffee.com/his0203" class="support-button"><img src="https://img.buymeacoffee.com/button-api/?text=Buy me a beer&emoji=🍺&slug=his0203&button_colour=5F7FFF&font_colour=ffffff&font_family=Lato&outline_colour=000000&coffee_colour=FFDD00" /></a>
             </div>
             <p class="supportText">Since the AI execution costs are covered by the creator, clicking the generate button will open an advertisement.<br>Thank you for your support! ✨</p>
         </form>
@@ -266,10 +266,6 @@
                     window.open(twitterUrl, '_blank');
                 });
             }
-        });
-
-        document.getElementById('support-button').addEventListener('click', () => {
-            window.open('https://buymeacoffee.com/his0203', '_blank'); 
         });
 
         function openModal() {
