--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,8 @@
                 <li class="dropdown">
                     <a href="#" class="dropbtn">Projects</a>
                     <div class="dropdown-content">
-                        <a href="#" onclick="window.open('https://emotional-gpt.vercel.app/', '_blank')">Insideout Mindset</a>
+                        <a href="#" onclick="window.open('https://emotional-gpt.vercel.app/', '_blank')">🧠 Insideout Mindset</a>
+                        <a href="#" onclick="window.open('https://meow-talk.vercel.app/', '_blank')">🐱 MeowTalk</a>
                         <p class="disable">Coming soon</p>
                     </div>
                 </li>
@@ -64,7 +65,10 @@
             <div class="mobile-dropdown-content" id="mobileDropdownContent">
                 <span class="close-button" id="mobileDropdownClose">&times;</span>
                 <a href="#" onclick="window.open('https://emotional-gpt.vercel.app/', '_blank')">
-                    Insideout Mindset
+                    🧠 Insideout Mindset
+                </a>
+                <a href="#" onclick="window.open('https://meow-talk.vercel.app/', '_blank')">
+                    🐱 MeowTalk
                 </a>
                 <p class="disable">
                     Coming soon
