--- a/templates/index.html
+++ b/templates/index.html
@@ -190,7 +190,7 @@
 
 
     <footer>
-        <p>&copy; 2024 Heesoo Jin. All rights reserved.</p>
+        <p>&copy; 2024 ODD. All rights reserved.</p>
     </footer>
 
     <div id="disclaimerModal" class="modal">
