--- a/templates/index.html
+++ b/templates/index.html
@@ -53,6 +53,8 @@
                     <div class="dropdown-content">
                         <a href="#" onclick="window.open('https://emotional-gpt.vercel.app/', '_blank')">🧠 Insideout Mindset</a>
                         <a href="#" onclick="window.open('https://meow-talk.vercel.app/', '_blank')">🐱 MeowTalk</a>
+                        <a href="#" onclick="window.open('https://gen-z-vibe.vercel.app/', '_blank')">💀 Gen Z Vibe</a>
+                        <a href="#" onclick="window.open('https://luv-moon-cheol.vercel.app/', '_blank')">❤️‍🩹 Luv Moon Chul</a>
                         <p class="disable">Coming soon</p>
                     </div>
                 </li>
@@ -70,6 +72,8 @@
                 <a href="#" onclick="window.open('https://meow-talk.vercel.app/', '_blank')">
                     🐱 MeowTalk
                 </a>
+                <a href="#" onclick="window.open('https://gen-z-vibe.vercel.app/', '_blank')">💀 Gen Z Vibe</a>
+                <a href="#" onclick="window.open('https://luv-moon-cheol.vercel.app/', '_blank')">❤️‍🩹 Luv Moon Chul</a>
                 <p class="disable">
                     Coming soon
                 </p>
